src/objects/Rule_Category__c/Rule_Category__c.object-meta.xml
<CustomObject>
    <label>Rule Category</label>
    <nameField>
        <displayFormat>CAT-{0000}</displayFormat>
        <label>Rule Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>