src/objects/Rule_Category__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>