src/objects/Rule_Category__c/fields/Rule_Category_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category_Ext_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Rule Category Ext ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>