src/objects/Rule_Category__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>