src/objects/Rule_Category__c/listViews/All_Categories.listView-meta.xml
<ListView>
    <fullName>All_Categories</fullName>
    <columns>NAME</columns>
    <columns>Rule_Category__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>Rule_Category_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Categories</label>
</ListView>